Started new active ragdoll

--- a/3D Game/Assembly-CSharp.csproj
+++ b/3D Game/Assembly-CSharp.csproj
@@ -40,50 +40,51 @@
      <Compile Include="Assets\LowPolyMale\Demo\Scripts\CameraSetPos.cs" />
      <Compile Include="Assets\Scripts\WeaponPickupScript.cs" />
      <Compile Include="Assets\Scripts\Motion.cs" />
+     <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\SingleBoxDoorButton.cs" />
      <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\ParticleSystemController\SaveParticleSystemScript.cs" />
      <Compile Include="Assets\Scripts\JointFollowAnimRot.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\FastIK\Scripts\Sample\SampleSinMover.cs" />
      <Compile Include="Assets\Scripts\EnemyScript.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\Platform.cs" />
      <Compile Include="Assets\HighlightPlus\Scripts\HighlightProfile.cs" />
      <Compile Include="Assets\Scripts\Balance.cs" />
      <Compile Include="Assets\HighlightPlus\Scripts\HighlightEffectOccluderManager.cs" />
      <Compile Include="Assets\Scripts\RagdollDeath.cs" />
      <Compile Include="Assets\Scripts\RagdollToggle.cs" />
      <Compile Include="Assets\HighlightPlus\Demo\Scripts\SphereHighlightEventExample.cs" />
+     <Compile Include="Assets\APR Player\APR\Scripts\ImpactContact.cs" />
+     <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\MultiBoxDoorButton.cs" />
      <Compile Include="Assets\FastIK\Scripts\Sample\SampleProcedualAnimation.cs" />
      <Compile Include="Assets\Scripts\GunScript.cs" />
      <Compile Include="Assets\LowPolyMale\Demo\Scripts\CharacterCreation.cs" />
      <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\ParticleSystemController\ParticleSystemController.cs" />
+     <Compile Include="Assets\APR Player\APR\Scripts\FeetContact.cs" />
      <Compile Include="Assets\HighlightPlus\Scripts\HighlightTrigger.cs" />
      <Compile Include="Assets\Scripts\IKAnimation.cs" />
      <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\ParticleSystemController\ParticleSystemControllerEditor.cs" />
      <Compile Include="Assets\LowPolyMale\Demo\Scripts\Spin.cs" />
      <Compile Include="Assets\FastIK\Scripts\FastIK\FastIKCCD.cs" />
      <Compile Include="Assets\FastIK\Scripts\FastIK\FastIKFabric.cs" />
-     <Compile Include="Assets\Scripts\ProjectileMoveScript.cs" />
-     <Compile Include="Assets\HighlightPlus\Scripts\HighlightEffectActions.cs" />
-     <Compile Include="Assets\FastIK\Scripts\Sample\SampleRotator.cs" />
-     <Compile Include="Assets\FastIK\Scripts\FastIK\FastIKLook.cs" />
-     <Compile Include="Assets\HighlightPlus\Scripts\HighlightManager.cs" />
-     <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\UniqueProjectiles\CameraShakeSimpleScript.cs" />
-     <Compile Include="Assets\HighlightPlus\Scripts\HighlightSeeThroughOccluder.cs" />
-     <Compile Include="Assets\HighlightPlus\Scripts\HighlightEffect.cs" />
-     <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\UniqueProjectiles\RotateToMouseScript.cs" />
-     <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\SingleBoxDoorButton.cs" />
-     <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\Platform.cs" />
-     <Compile Include="Assets\APR Player\APR\Scripts\ImpactContact.cs" />
-     <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\MultiBoxDoorButton.cs" />
-     <Compile Include="Assets\APR Player\APR\Scripts\FeetContact.cs" />
      <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\MultiBoxButton.cs" />
      <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\PlayerOutOfBounds.cs" />
      <Compile Include="Assets\APR Player\APR\Scripts\APRController.cs" />
+     <Compile Include="Assets\Scripts\ProjectileMoveScript.cs" />
+     <Compile Include="Assets\HighlightPlus\Scripts\HighlightEffectActions.cs" />
      <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\ObjectOutOfBound.cs" />
+     <Compile Include="Assets\FastIK\Scripts\Sample\SampleRotator.cs" />
+     <Compile Include="Assets\FastIK\Scripts\FastIK\FastIKLook.cs" />
      <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\FinalBoxButton.cs" />
+     <Compile Include="Assets\HighlightPlus\Scripts\HighlightManager.cs" />
+     <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\UniqueProjectiles\CameraShakeSimpleScript.cs" />
      <Compile Include="Assets\APR Player\APR\Scripts\CameraController.cs" />
      <Compile Include="Assets\APR Player\APR\Scripts\HandContact.cs" />
      <Compile Include="Assets\APR Player\Examples\Dependancies\Scripts\FPSCounter.cs" />
+     <Compile Include="Assets\HighlightPlus\Scripts\HighlightSeeThroughOccluder.cs" />
+     <Compile Include="Assets\HighlightPlus\Scripts\HighlightEffect.cs" />
+     <Compile Include="Assets\Bullets\Unique_ToonProjectiles_Volume_1\Scripts\UniqueProjectiles\RotateToMouseScript.cs" />
+     <Compile Include="Assets\Scripts\HingeJointTarget.cs" />
      <None Include="Assets\Shaders\UltimateOutlineShadows.shader" />
      <None Include="Assets\APR Player\Examples\Dependancies\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
      <None Include="Assets\FastIK\Documentation.txt" />
